--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css" <meta charset="UTF-8">
+  <link rel="stylesheet" href="styles/style.css">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
 </head>
@@ -17,7 +18,7 @@
         подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">Узнать →</a>
       </h2>
-      <img class="header__main-illustration" alt="Главная иллюстрация" src="../images/header-image.png" </div>
+      <img class="header__main-illustration" alt="Главная иллюстрация" src="../images/header-image.png">
       <div class="header__square-pic"></div>
     </header>
     <section class="description">
@@ -78,11 +79,11 @@
       </div>
     </section>
     <section class="feynman">
-      <h1 class="feynman__title">Метод Фейнмана</h1>
+      <h2 class="feynman__title">Метод Фейнмана</h2>
       <h3 class="feynman__subtitle">Выучить и не забыть.<a class="feynman__link" href="#">Подробнее →</a></h3>
     </section>
     <section class="kaufman">
-      <img class="kaufman__triangle" src="../images/kaufman-triangle.svg">
+      <img class="kaufman__triangle" alt="Image triangle" src="../images/kaufman-triangle.svg">
       <h2 class="section-title section-title_theme_dark kaufman_text-color_white">Принципы обучения</h2>
       <h3 class="section-subtitle section-subtitle_theme_dark kaufman_text-color_white">от Джоша Кауфмана</h3>
       <div class="table table_theme_dark kaufman_text-color_white">
@@ -126,6 +127,7 @@
           <h3 class="table__heading">10</h3>
           <p class="table__text">Уделяйте внимание количеству и скорости.</p>
         </div>
+      </div>
     </section>
     <footer class="footer">
       <div class="footer__columns">
@@ -141,10 +143,12 @@
         </div>
         <div class="footer__columns_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <a class="footer__column-links" href="#"><img src="../images/youtube-icon.svg">  YouTube</a>
-          <a class="footer__column-links" href="#"><img src="../images/vk_color_white.svg">  ВКонтакте</a>
-          <a class="footer__column-links" href="#"><img src="../images/tiktok-icon.svg"> TikTok</a>
+          <a class="footer__column-links" href="#"><img alt="'YouTube-icon" src="../images/youtube-icon.svg">
+            YouTube</a>
+          <a class="footer__column-links" href="#"><img alt="'VK-icon" src="../images/vk_color_white.svg"> ВКонтакте</a>
+          <a class="footer__column-links" href="#"><img alt="'TikTok-icon" src="../images/tiktok-icon.svg"> TikTok</a>
         </div>
+      </div>
     </footer>
     <main>
 
