--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <h3 class="feynman__subtitle">Выучить и не забыть.<a class="feynman__link" href="#">Подробнее →</a></h3>
     </section>
     <section class="kaufman">
-      <img class="kaufman__triangle" alt="Image triangle" src="../images/kaufman-triangle.svg">
+      <img class="kaufman__triangle" alt="ИЗображение треугольника" src="../images/kaufman-triangle.svg">
       <h2 class="section-title section-title_theme_dark kaufman_text-color_white">Принципы обучения</h2>
       <h3 class="section-subtitle section-subtitle_theme_dark kaufman_text-color_white">от Джоша Кауфмана</h3>
       <div class="table table_theme_dark kaufman_text-color_white">
@@ -143,10 +143,10 @@
         </div>
         <div class="footer__columns_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <a class="footer__column-links" href="#"><img alt="'YouTube-icon" src="../images/youtube-icon.svg">
+          <a class="footer__column-links" href="#"><img alt="Иконка YouTube" src="../images/youtube-icon.svg">
             YouTube</a>
-          <a class="footer__column-links" href="#"><img alt="'VK-icon" src="../images/vk_color_white.svg"> ВКонтакте</a>
-          <a class="footer__column-links" href="#"><img alt="'TikTok-icon" src="../images/tiktok-icon.svg"> TikTok</a>
+          <a class="footer__column-links" href="#"><img alt="'Иконка VK" src="../images/vk_color_white.svg"> ВКонтакте</a>
+          <a class="footer__column-links" href="#"><img alt="'Иконка TikTok" src="../images/tiktok-icon.svg"> TikTok</a>
         </div>
       </div>
     </footer>
