--- a/index.html
+++ b/index.html
@@ -18,140 +18,142 @@
         подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">Узнать →</a>
       </h2>
-      <img class="header__main-illustration" alt="Главная иллюстрация" src="../images/header-image.png">
+      <img class="header__main-illustration" alt="Картина Решетникова 'Опять двойка'" src="../images/header-image.png">
       <div class="header__square-pic"></div>
     </header>
-    <section class="description">
-      <div class="two-columns">
-        <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
-        <ul class="two-columns__main-text">
-          <li class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
-            материал. Мы
-            готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но
-            часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</li>
-          <li class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно
-            уметь, но почему-то этому мало где учат. Что с этим делать?
-          </li>
-          <li class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
-            сделать его
-            эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</li>
-        </ul>
-      </div>
-    </section>
-    <section class="digits">
-      <h2 class="section-title">Цифры и факты</h2>
-      <h3 class="section-subtitle">Про учёбу и мозг</h3>
-      <div class="table">
-        <div class="table__cell">
-          <h3 class="table__heading">86 миллиардов</h3>
-          <p class="table__text">Число нейронов в мозге человека</p>
-        </div>
-        <div class="table__cell">
-          <h3 class="table__heading">2.1 миллиарда</h3>
-          <p class="table__text">Число нуждающихся в повышении квалификации</p>
-          <p class="table__text">Всемирный Банк, 2017</p>
-        </div>
-        <div class="table__cell">
-          <h3 class="table__heading">1000 терабайт</h3>
-          <p class="table__text">Объём памяти человека</p>
-        </div>
-        <div class="table__cell">
-          <h3 class="table__heading">500 триллионов</h3>
-          <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-        </div>
-        <div class="table__cell">
-          <h3 class="table__heading">420 миллионов</h3>
-          <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-          <p class="table__text">Всемирный Банк, 2017</p>
-        </div>
-        <div class="table__cell">
-          <h3 class="table__heading">17–20 лет</h3>
-          <p class="table__text">Пик обучаемости</p>
-        </div>
-        <div class="table__cell">
-          <h3 class="table__heading">1885 год</h3>
-          <p class="table__text">Открытие кривой забывания</p>
-        </div>
-        <div class="table__cell">
-          <h3 class="table__heading">1889 год</h3>
-          <p class="table__text">Открытие условного рефлекса</p>
-        </div>
-      </div>
-    </section>
-    <section class="feynman">
-      <h2 class="feynman__title">Метод Фейнмана</h2>
-      <h3 class="feynman__subtitle">Выучить и не забыть.<a class="feynman__link" href="#">Подробнее →</a></h3>
-    </section>
-    <section class="kaufman">
-      <img class="kaufman__triangle" alt="ИЗображение треугольника" src="../images/kaufman-triangle.svg">
-      <h2 class="section-title section-title_theme_dark kaufman_text-color_white">Принципы обучения</h2>
-      <h3 class="section-subtitle section-subtitle_theme_dark kaufman_text-color_white">от Джоша Кауфмана</h3>
-      <div class="table table_theme_dark kaufman_text-color_white">
-        <div class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">1</h3>
-          <p class="table__text">Выберите привлекательный проект.</p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">2</h3>
-          <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">3</h3>
-          <p class="table__text">Определите целевой уровень мастерства.</p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">4</h3>
-          <p class="table__text">Разбейте навык на элементы.</p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">5</h3>
-          <p class="table__text">Приготовьте всё необходимое для занятий.</p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">6</h3>
-          <p class="table__text">Устраните препятствия для занятий.</p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">7</h3>
-          <p class="table__text">Выделите специальное время для занятий.</p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">8</h3>
-          <p class="table__text">Создайте быстрые петли обратной связи.</p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">9</h3>
-          <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">10</h3>
-          <p class="table__text">Уделяйте внимание количеству и скорости.</p>
-        </div>
-      </div>
-    </section>
-    <footer class="footer">
-      <div class="footer__columns">
-        <div class="footer__columns_content_copyright">
-          <div class="logo logo_place_footer"></div>
-          <p class="footer__author">© Никита Алексанкин</p>
-        </div>
-        <div class="footer__columns_info">
-          <h3 class="footer__column-heading">О Практикуме</h3>
-          <a class="footer__column-links" href="#">Главная</a>
-          <a class="footer__column-links" href="#">Концепция</a>
-          <a class="footer__column-links" href="#">Наставники</a>
-        </div>
-        <div class="footer__columns_social">
-          <h3 class="footer__column-heading">Соцсети</h3>
-          <a class="footer__column-links" href="#"><img alt="Иконка YouTube" src="../images/youtube-icon.svg">
-            YouTube</a>
-          <a class="footer__column-links" href="#"><img alt="'Иконка VK" src="../images/vk_color_white.svg"> ВКонтакте</a>
-          <a class="footer__column-links" href="#"><img alt="'Иконка TikTok" src="../images/tiktok-icon.svg"> TikTok</a>
-        </div>
-      </div>
-    </footer>
     <main>
-
+      <section class="description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
+              материал. Мы
+              готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но
+              часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно
+              уметь, но почему-то этому мало где учат. Что с этим делать?
+            </p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
+              сделать его
+              эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
+      </section>
+      <section class="digits">
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <ul class="table">
+          <li class="table__cell">
+            <h4 class="table__heading">86 миллиардов</h4>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">2.1 миллиарда</h4>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1000 терабайт</h4>
+            <p class="table__text">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">500 триллионов</h4>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">420 миллионов</h4>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">17–20 лет</h4>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1885 год</h4>
+            <p class="table__text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1889 год</h4>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a class="feynman__link" href="#">Подробнее →</a>
+      </section>
+      <section class="kaufman">
+        <div class="kaufman__triangle"></div>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">1</h4>
+            <p class="table__text">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">2</h4>
+            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">3</h4>
+            <p class="table__text">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">4</h4>
+            <p class="table__text">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">5</h4>
+            <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">6</h4>
+            <p class="table__text">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">7</h4>
+            <p class="table__text">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">8</h4>
+            <p class="table__text">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">9</h4>
+            <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">10</h4>
+            <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
+      </section>
+      <footer class="footer">
+        <div class="footer__columns">
+          <div class="footer__columns_content_copyright">
+            <div class="logo logo_place_footer"></div>
+            <p class="footer__author">© Никита Алексанкин</p>
+          </div>
+          <div class="footer__columns_info">
+            <h3 class="footer__column-heading">О Практикуме</h3>
+            <nav class="footer__column-links">
+              <a class="footer__column-link" href="#">Главная</a>
+              <a class="footer__column-link" href="#">Концепция</a>
+              <a class="footer__column-link" href="#">Наставники</a>
+            </nav>
+          </div>
+          <div class="footer__columns_social">
+            <h3 class="footer__column-heading">Соцсети</h3>
+            <div class="footer__column-links"></div>
+              <a class="footer__column-link" href="#"><img  class="footer__social-icon" alt="Иконка YouTube" src="../images/youtube-icon.svg">YouTube</a>
+              <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="'Иконка VK" src="../images/vk_color_white.svg">ВКонтакте</a>
+              <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="'Иконка TikTok" src="../images/tiktok-icon.svg">TikTok</a>
+            </div>
+        </div>
+      </footer>
     </main>
   </div>
 </body>
