Сверсал новые секции, организовал файловую структуру по БЭМ Nested и добавил анимаций

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="ru">
 
 <head>
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="pages/index.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
@@ -38,6 +37,78 @@
               эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
+      </section>
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <h3 class="section-subtitle">Пять практик от Барбары Оакл</h3>
+        <div class="cards">
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-attention.png" alt="Изображение книги">
+            <h4 class="cards__title">Два вида внимания</h4>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+              мышление.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-recall.png" alt="Изображение скульптуры">
+            <h4 class="cards__title">Recall</h4>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-interliving.png" alt="Изображение амфитеатра">
+            <h4 class="cards__title">Интерливинг</h4>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-question.png"
+              alt="Пустая белая комната со множеством дверей и окон">
+            <h4 class="cards__title">Вопросы</h4>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+              волнует.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-competence.png" alt="Стопка книг">
+            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+              владеете новой темой.</p>
+          </div>
+        </div>
+      </section>
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+        <div class="video__iframes">
+          <div class="video__iframe">
+            <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video
+              player"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+          </div>
+          <div class="video__iframe">
+            <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
+              title="YouTube video player"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+          </div>
+        </div>
+      </section>
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">История Барбары Оакли.
+              С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не
+              самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в
+              командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой
+              подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо
+              глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a class="feynman__link" href="#">Подробнее →</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -79,10 +150,20 @@
           </li>
         </ul>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        <a class="feynman__link" href="#">Подробнее →</a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+            миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
+            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="images/khan-book.jpg" alt="Обложка книги Салмана Хана - Весь мир — школа">
+            <a class="khan__buy-link" href="#">Купить книгу →</a>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
         <div class="kaufman__triangle"></div>
@@ -131,6 +212,16 @@
           </li>
         </ul>
       </section>
+      <section class="resoures">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <div class="resoures__logo-zone">
+          <a class="resoures__link" href="#"><img class="resoures__logo" src="images/logo/resources-arzamas.svg" alt="Логотип arzamas"></a>
+          <a class="resoures__link" href="#"><img class="resoures__logo" src="images/logo/resources-n1.svg" alt="Логотип n1"></a>
+          <a class="resoures__link" href="#"><img class="resoures__logo" src="images/logo/resources-strelka.svg" alt="Логотип strelka"></a>
+          <a class="resoures__link" href="#"><img class="resoures__logo" src="images/logo/resources-polka.svg" alt="Логотип polka"></a>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
@@ -149,10 +240,13 @@
         <div class="footer__columns_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <div class="footer__column-links"></div>
-            <a class="footer__column-link" href="#"><img  class="footer__social-icon" alt="Иконка YouTube" src="../images/youtube-icon.svg">YouTube</a>
-            <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="'Иконка VK" src="../images/vk_color_white.svg">ВКонтакте</a>
-            <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="'Иконка TikTok" src="../images/tiktok-icon.svg">TikTok</a>
-          </div>
+          <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Иконка YouTube"
+              src="../images/youtube-icon.svg">YouTube</a>
+          <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="'Иконка VK"
+              src="../images/vk_color_white.svg">ВКонтакте</a>
+          <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="'Иконка TikTok"
+              src="../images/tiktok-icon.svg">TikTok</a>
+        </div>
       </div>
     </footer>
   </div>
