second practical work

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <div class="logo logo_place_footer"></div>
           <p class="footer__author">© Никита Алексанкин</p>
         </div>
-        <div class="footer__columns_info">
+        <div class="footer__columns_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <nav class="footer__column-links">
             <a class="footer__column-link" href="#">Главная</a>
@@ -237,7 +237,7 @@
             <a class="footer__column-link" href="#">Наставники</a>
           </nav>
         </div>
-        <div class="footer__columns_social">
+        <div class="footer__columns_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <div class="footer__column-links"></div>
           <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Иконка YouTube"
