--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <h2 class="header__subtitle">Какие современные и эффективные
+      <p class="header__subtitle">Какие современные и эффективные
         подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">Узнать →</a>
-      </h2>
-      <img class="header__main-illustration" alt="Картина Решетникова 'Опять двойка'" src="../images/header-image.png">
-      <div class="header__square-pic"></div>
+      </p>
+      <img class="header__main-illustration" alt="Картина Решетникова 'Опять двойка'" src="images/header-image.png">
+      <div class="header__square-pic rotation"></div>
     </header>
     <main>
       <section class="description">
@@ -77,18 +77,14 @@
         <h2 class="section-title">Видео на TED</h2>
         <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
-          <div class="video__iframe">
-            <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video
-              player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
-          </div>
-          <div class="video__iframe">
-            <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
-              title="YouTube video player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
-          </div>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video
+            player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"
+            title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -166,7 +162,7 @@
         </div>
       </section>
       <section class="kaufman">
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
         <ul class="table table_theme_dark">
@@ -241,11 +237,11 @@
           <h3 class="footer__column-heading">Соцсети</h3>
           <div class="footer__column-links"></div>
           <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Иконка YouTube"
-              src="../images/youtube-icon.svg">YouTube</a>
+              src="images/youtube-icon.svg">YouTube</a>
           <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="'Иконка VK"
-              src="../images/vk_color_white.svg">ВКонтакте</a>
+              src="images/vk_color_white.svg">ВКонтакте</a>
           <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="'Иконка TikTok"
-              src="../images/tiktok-icon.svg">TikTok</a>
+              src="images/tiktok-icon.svg">TikTok</a>
         </div>
       </div>
     </footer>
